ukmlaos-pemilu-app.yaml
# my-laravel-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ukmlaos-pemilu
  labels:
    app: ukmlaos-pemilu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ukmlaos-pemilu
  template:
    metadata:
      labels:
        app: ukmlaos-pemilu
    spec:
      containers:
      - name: ukmlaos-pemilu
        image: [ my-laravel-app ]
        ports:
        - containerPort: 80
