ukmlaos-pemilu-service.yaml
# my-laravel-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ukmlaos-pemilu
  labels:
    app: ukmlaos-pemilu
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: ukmlaos-pemilu
