ingress.yaml
# my-laravel-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ukmlaos-pemilu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ukmlaos-pemilu.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ukmlaos-pemilu
            port:
              name: http
